# home-ventilation-automation

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  config.example.toml  pyproject.toml
.claude/commands/: check.md  debug-fan.md  deploy-check.md  fix.md
.github/workflows/: ci.yml
firmware/: config.example.json  platformio.ini
firmware/scripts/: embed_html.py  toml2json.py
firmware/src/: config.cpp  config.h  display.cpp  display.h  fan_logic.cpp  fan_logic.h  history.cpp  history.h  main.cpp  shelly_client.cpp  shelly_client.h  tuya_client.cpp  tuya_client.h  tuya_crypto.cpp  tuya_crypto.h  webhook_server.cpp  webhook_server.h
firmware/web/: dev_server.py  index.html
home_ventilation/: __main__.py  config.py  daemon.py  fan.py  homebridge.py  models.py  sensor_cache.py  shelly.py  status_writer.py  tuya.py  webhook.py
shelly-scripts/: cover-switch-override.js
systemd/: home-ventilation.service
tests/: conftest.py  test_daemon.py  test_fan.py  test_sensor_cache.py  test_status_writer.py  test_tuya.py  test_webhook.py
