[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-ventilation"
version = "0.1.0"
description = "Automated control of bathroom exhaust fans based on CO2, humidity, and manual switches"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "tinytuya>=1.17.6",
]

[project.scripts]
home-ventilation = "home_ventilation.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
]

[tool.ruff]
line-length = 99
target-version = "py312"
exclude = ["firmware/scripts/embed_html.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
